# brave-scraper-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  BROWSER_LIFECYCLE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
skills/brave-scraper-mcp/: AGENT_SETUP.md  SKILL.md
skills/brave-scraper-mcp/references/: api-reference.md
skills/stealth-browser-mcp/: SKILL.md
skills/stealth-browser-mcp/references/: agent-setup.md  api-reference.md  mcp-clients.md
src/: __init__.py  server.py
src/browser/: captcha.py  manager.py  subagent_manager.py
src/tools/: brave_search.py
tests/: conftest.py  integration_tests.py  test_ai_summary.py  test_brave_search.py  test_browser_lifecycle.py  test_browser_parity.py  test_captcha.py  test_new_features.py  test_server.py  test_server_unit.py  test_session_routing.py  test_stealth_search.py  verify_fixes.py
